<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
                android:id="@+id/home"
                android:icon="@drawable/home_icon"
                android:title="@string/home"
        />
        <item
                android:id="@+id/app_bar_search"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search_ibet"
                app:actionViewClass="android.widget.SearchView"/>


        <item
                android:id="@+id/sports"
                android:title="SPORTS"
                android:icon="@drawable/soccer"
        />
        <item
                android:id="@+id/live_casino"
                android:icon="@drawable/casino"
                android:title="LIVE CASINO"/>
        <item
                android:id="@+id/slots"
                android:icon="@drawable/slots"
                android:title="SLOTS"/>
        <item
                android:id="@+id/lottery"
                android:icon="@drawable/lottery"
                android:title="Lottery"/>
        <item
                android:id="@+id/language"
                android:title="@string/language"/>



    </group>




</menu>
