<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <Button
            android:id="@+id/btnOneClick"
            android:layout_width="377dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:textAllCaps="false"
            android:textColor="@android:color/widget_edittext_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"

            android:textSize="16sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnLoginEmail"
            android:text="1-click registration"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
    />

    <TextView
            android:text="@string/welcome_to_the_best_n_betting_on_the_planet_n"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:textSize="26sp" android:textStyle="bold" android:textColor="@android:color/widget_edittext_dark"/>

    <TextView
            android:text="@string/we_mean_it_ibet_is_the_mutt_s_nuts_n_soon_you_ll_see_why_n_n_so_how_would_you_like_to_log_in_to_n_your_ibet_account"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.428"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="378dp"
            android:layout_height="41dp"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:text="@string/i_ll_use_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/widget_edittext_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            android:textSize="16sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <Button
            android:id="@+id/btnLoginTwitter"
            android:layout_width="376dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:text="@string/i_ll_use_twitter"
            android:textAllCaps="false"
            android:textColor="@android:color/widget_edittext_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            android:textSize="16sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook"/>

    <Button
            android:id="@+id/btnLoginEmail"
            android:layout_width="377dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:text="@string/i_ll_use_email_and_password"
            android:textAllCaps="false"
            android:textColor="@android:color/widget_edittext_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginTwitter"
            android:textSize="16sp"
    />

    <TextView
            android:text="@string/we_will_sometimes_send_you_emails_with_offers_n_regarding_our_services_you_can_unsubscribe_n_from_receiving_these_emails_at_any_time_free_n_of_charge_n_nby_signing_up_you_agree_to_ibet_s_terms_and_conditions_and_confirm_that_you_ve_read_and_understood_the_privacy_policy"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnOneClick"/>


</android.support.constraint.ConstraintLayout>