<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <CheckBox
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="28dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/con_password_id"/>
    <TextView
            android:text="@string/sign_up_1_of_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signup1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="24sp"
            android:textStyle="bold"/>



    <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_signup1"/>
    <EditText
            android:layout_width="373dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/border"
            android:id="@+id/username_id" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username1" android:autofillHints=""/>
    <TextView
            android:text="@string/this_will_be_used_to_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_id"/>



    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_username2"/>
    <EditText
            android:layout_width="374dp"
            android:layout_height="37dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_id" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email1" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:background="@drawable/border"
            android:singleLine="false" android:selectAllOnFocus="false" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:autofillHints=""/>
    <TextView
            android:text="@string/this_will_be_used_to_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email2"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_id"/>



    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password1" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="375dp"
            android:layout_height="39dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_id" android:layout_marginTop="8dp"
            android:background="@drawable/border"
            app:layout_constraintTop_toBottomOf="@+id/tv_password1" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:autofillHints=""/>
    <TextView
            android:text="@string/at_least_8_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"/>
    <LinearLayout
            android:layout_width="274dp"
            android:layout_height="20dp"
            android:orientation="horizontal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_password2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout">
        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:maxHeight="20dip"
                android:minHeight="20dip"
                android:layout_weight="1"
                android:progress="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/weak"
                android:id="@+id/password_strength"/>
    </LinearLayout>

    <TextView
            android:text="@string/tips_for_a_strong_password_n_use_letters_and_numbers_n_use_special_characters_eg_n_mix_lower_and_uppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tips_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_con_password1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_tips_password"/>
    <EditText
            android:layout_width="375dp"
            android:layout_height="39dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/con_password_id"
            android:background="@drawable/border"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_con_password1" android:autofillHints=""/>

    <Button
            android:text="@string/continue_"
            android:layout_width="285dp"
            android:layout_height="41dp"
            android:id="@+id/continue1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/com_facebook_button_login_silver_background_color" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/con_password_id"/>
    <CheckBox
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1" android:textSize="14sp"
            android:textStyle="italic" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password_id" android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="28dp"/>
    <Button
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:background=
                    "@android:drawable/ic_menu_close_clear_cancel"
            android:id="@+id/close1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>