<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:background=
                    "@android:drawable/ic_menu_close_clear_cancel"
            android:id="@+id/close3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/sign_up_3_of_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signup3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="24sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/final_step_we_need_to_know_you_re_na_real_person_n_nplease_confirm_either_your_phone_nnumber_or_your_email_to_complete_nyour_registration"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_word"
            android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.571"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_signup3"/>
    <Button
            android:text="@string/confirm_with_sms"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:id="@+id/con_sms" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_word" app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="60dp" android:textSize="18sp"/>
    <Button
            android:text="@string/confirm_with_email"
            android:layout_width="282dp"
            android:layout_height="52dp"
            android:id="@+id/con_email" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:background="@color/com_facebook_button_login_silver_background_color"
            app:layout_constraintHorizontal_bias="0.495"
            android:textSize="18sp" android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/con_sms"/>

</android.support.constraint.ConstraintLayout>